The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

### Changed

### Deprecated

### Removed

### Fixed


## [24.08] 2024-08-01

### Fixed

* VERSION variable must contain valid characters only

### Added

* IS_EVOLIX_GROUP: new check to verify that all Evolix users are in "evolix" group

### Changed

* IS_SYSLOGCONF: modern and legacy tests
* IS_MYSQLNRPE: ajust check for monitoringctl new nagios conf

### Deprecated

### Removed

### Fixed

* Fix errors in some LXC checks: list only active LXC containers, add conditions to filter containers that are not in evo-standards.
* IS_SSHALLOWUSERS: fix unwanted sterr when /etc/ssh/sshd_condig.d does not exist.
* IS_PURGE_FAIL2BAN: Fix bad name, rename to IS_FAIL2BAN_PURGE.
* IS_SYSLOGCONF: better detection


## [24.01] 2024-01-03

### Added

* IS_BACKPORTS_VERSION: check if the Backports release matches the Debian release

### Changed

* IS_BROADCOMFIRMWARE: use apt policy
* Prefer long options
* IS_POSTFIX_MYDESTINATION: use fixed string instead of escaping characters

### Fixed

* IS_EVOBACKUP_EXCLUDE_MOUNT: correctly treat old versions of evobackup
* IS_DEBIANSECURITY_LXC: don’t test older than Debian 9 containers
* IS_KERNELUPTODATE: address false positive in case of kernel removal
* IS_SSHPERMITROOTNO: specify lport, avoiding failure if sshd listens to more than one port
* IS_DRBDTWOPRIMARIES: fix false positive (#151)
* IS_ETCGIT_LXC, IS_GITPERMS_LXC: fix path

## [23.11.1] 2023-11-27

### Fixed

* IS_EVOBACKUP_EXCLUDE_MOUNT: fix another regression introduced in previous release

### Security

## [23.11] 2023-11-27

### Added

* trixie and forky support (Debian 13, 14)
* IS_LXC_OPENSSH: check in openssh is installed in containers
* IS_LXC_PHP_BAD_DEBIAN_VERSION: check if php containers use the expected Debian release